# engine

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: METHODS.md  PIPELINE.md  VALIDATION.md  index.html  methods.tex
examples/: quickstart.py
scripts/: ingest_haiku_survey.py
src/welfareweights/: __init__.py  anchor.py  checks.py  design.py  inference.py  pipeline.py  pooling.py  probit.py  rescale.py  simulate.py  survey.py  validate.py
studies/: RESULTS-coverage.md  RESULTS-gbd-scale.md  RESULTS-misspecification.md  RESULTS-power.md  coverage.py  gbd_scale.py  misspecification.py  power_curves.py
studies/results/: coverage.csv  gbd_scale.csv  misspecification.csv  power_curves.csv
tests/: test_crosscheck.py  test_curvature_diagnostic.py  test_extrapolation.py  test_failure_modes.py  test_inference.py  test_input_checks.py  test_metamorphic.py  test_parsers.py  test_pooling.py  test_recovery.py  test_survey.py  test_validate.py
tools/: check_links.py
