[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "welfareweights"
version = "0.1.1"
description = "Open implementation of the GBD disability-weight estimation pipeline (Salomon et al. 2012/2015): probit on paired comparisons, interval regression on population-health-equivalence responses, logit-space rescaling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://welfareweights.com"
Documentation = "https://welfareweights.github.io/engine/"
Repository = "https://github.com/welfareweights/engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
